--- a/static/styles.css
+++ b/static/styles.css
@@ -3,16 +3,27 @@ body {
 	font-family: Verdana Arial, sans-serif;
 	margin-top: 0;
 	padding: 0 5em;
+	background-color: white;
 }
 h1 {
-	background-color: #CCC;
+	background-color: dodgerblue;
 	padding: .2em;
 	border-top-left-radius: 25px;
 	border-top-right-radius: 25px; 
 	margin-bottom: 0;
+	color: white;
 }
-p, h2, ul, form {
-	background-color: #DEDEDE;
+
+p{
+	background-color:tomato;
+	margin: 0;
+	padding: 1em;
+	height: 2px ;
+	align-self: center;
+}
+
+h2, ul, form {
+	background-color:tomato;
 	margin: 0;
 	padding: 1em;
 }
@@ -20,6 +31,7 @@ form {
 	text-align: left;
 	padding-left: 25%;
 	padding-right: 25%;
+	background-color: rgb(243, 241, 241);
 }
 
 button {
@@ -43,7 +55,7 @@ button {
 }
 
 footer {
-	background-color: #CCC;
+	background-color:tomato;
 	padding: .5em;
 	border-bottom-left-radius: 25px;
 	border-bottom-right-radius: 25px; 
