Parte Leonardo Ultima Actualizacion

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <title>Proyecto 3</title>
     <br> <br> <br>
   
-    <h1 style=" background-color: white; color: black;">LENGUAJES Y AUTOMATAS </h1>
+    <h1 style=" background-color:black; color: white;">LENGUAJES Y AUTOMATAS </h1>
     <meta name="description" content="voting using Node.js">
     <meta name="author" content="automatas">
     <link rel="stylesheet" type="text/css" href="styles.css">
@@ -73,16 +73,16 @@
 </head>
 <body>
   <div id="results"></div>
-  <h1>SISTEMA SENCILLO DE VOTACION</h1>
+  <h1>SISTEMA SENCILLO DE VOTACION CON SOCKETS</h1>
 	<h2>¿Es buena la materia de automatas?</h2>
-      <form class="button-position" id="voteButton">
-            <p style="background-color: yellow;"> <strong>Opciones</strong> </p>
-            <input type="radio" name="vote" value="yes" id="yesButton"> Yes <br>
-            <input type="radio" name="vote" value="no" id="noButton"> No <br />
-      <p style="background-color: yellow;"> <strong>Resultados</strong> </p>
-      <p style="background-color: seagreen;">Asi es: <span id="showYesses"></span> </p> 
-      <p style="background-color:aquamarine;"> Claro que no: <span id="showNos"></span></p>
+      <form class="button-position" id="voteButton"><br/>
+            <p style="background-color:rgb(29, 28, 28);"> <strong>Opciones</strong> </p>
+            <input type="radio" name="vote" value="yes" id="yesButton"> SI <br>
+            <input type="radio" name="vote" value="no" id="noButton"> NO <br />
+      <p style="background-color:rgb(29, 28, 28)"> <strong>Resultados</strong> </p>
+      <p style="background-color:rgb(29, 28, 28);">Asi es: <span id="showYesses"></span> </p> 
+      <p style="background-color:rgb(29, 28, 28);"> No lo es: <span id="showNos"></span></p><br/>
       </form>
-  <footer><strong> Realizado por los alumnos: <br> luis enrique-- Leonardo Daniel -- Victor Jesus --- Alexis Roberto</strong></footer>
+  <footer><strong> Realizado por los alumnos: <br> Luis Coba-- Leonardo Lozano -- Victor Dzib --- Alexis Puc</strong></footer>
 </body>
 </html>
