--- a/static/styles.css
+++ b/static/styles.css
@@ -1,12 +1,12 @@
 body {
 	text-align: center;
-	font-family: Verdana Arial, sans-serif;
+	font-family: Georgia, 'Times New Roman', Times, serif;
 	margin-top: 0;
 	padding: 0 5em;
-	background-color: white;
+	background-color: rgb(170, 160, 160);
 }
 h1 {
-	background-color: dodgerblue;
+	background-color: black;
 	padding: .2em;
 	border-top-left-radius: 25px;
 	border-top-right-radius: 25px; 
@@ -15,7 +15,7 @@ h1 {
 }
 
 p{
-	background-color:tomato;
+	background-color:rgb(15, 15, 15);
 	margin: 0;
 	padding: 1em;
 	height: 2px ;
@@ -23,15 +23,15 @@ p{
 }
 
 h2, ul, form {
-	background-color:tomato;
-	margin: 0;
-	padding: 1em;
+	background-color:rgb(29, 28, 28);
+	color:white;
+	margin: 0;;
 }
 form {
 	text-align: left;
 	padding-left: 25%;
 	padding-right: 25%;
-	background-color: rgb(243, 241, 241);
+	background-color: rgb(29, 28, 28);
 }
 
 button {
@@ -49,16 +49,17 @@ button {
 }
 
 #results, #results * {
-	background-color: #84BE6A;
+	background-color: gray;
 	border-bottom-left-radius: 25px;
 	border-bottom-right-radius: 25px;
 }
 
 footer {
-	background-color:tomato;
+	background-color:black;
+	color: aliceblue;
 	padding: .5em;
 	border-bottom-left-radius: 25px;
 	border-bottom-right-radius: 25px; 
 	margin-top: 0;
 	font-size: smaller;
-}
+}	
