--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <title>Proyecto 3</title>
     <br> <br> <br>
+    <h1 style=" background-color:black; color: rgb(126, 45, 45);">INSTITUTO TECONOLOGICO SUPERIOR DE VALLADOLID</h1>
+    
   
-    <h1 style=" background-color:black; color: white;">LENGUAJES Y AUTOMATAS </h1>
+    <h1 style=" background-color:rgb(29, 12, 12); color: rgb(184, 84, 84);">LENGUAJES Y AUTOMATAS </h1>
     <meta name="description" content="voting using Node.js">
     <meta name="author" content="automatas">
     <link rel="stylesheet" type="text/css" href="styles.css">
@@ -76,12 +78,12 @@
   <h1>SISTEMA SENCILLO DE VOTACION CON SOCKETS</h1>
 	<h2>¿Es buena la materia de automatas?</h2>
       <form class="button-position" id="voteButton"><br/>
-            <p style="background-color:rgb(29, 28, 28);"> <strong>Opciones</strong> </p>
+            <p style="background-color:rgb(85, 22, 22);"> <strong>Opciones</strong> </p>
             <input type="radio" name="vote" value="yes" id="yesButton"> SI <br>
             <input type="radio" name="vote" value="no" id="noButton"> NO <br />
-      <p style="background-color:rgb(29, 28, 28)"> <strong>Resultados</strong> </p>
-      <p style="background-color:rgb(29, 28, 28);">Asi es: <span id="showYesses"></span> </p> 
-      <p style="background-color:rgb(29, 28, 28);"> No lo es: <span id="showNos"></span></p><br/>
+      <p style="background-color:rgb(65, 42, 42)"> <strong>Resultados</strong> </p>
+      <p style="background-color:rgb(65, 42, 42);">Asi es: <span id="showYesses"></span> </p> 
+      <p style="background-color:rgb(65, 42, 42);"> No lo es: <span id="showNos"></span></p><br/>
       </form>
   <footer><strong> Realizado por los alumnos: <br> Luis Coba-- Leonardo Lozano -- Victor Dzib --- Alexis Puc</strong></footer>
 </body>
