--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,24 +14,22 @@
     <script type ="text/javascript">
         $(document).ready(function (){
             // this triggers the connection event in our server!
-            var socket = io.connect('192.168.0.5:8000',{ 'forceNew': true });
+            var socket = io.connect('192.168.60.210:8000',{ 'forceNew': true });
             // we'll write all the socket stuff after the above line!
 
 
             socket.on('server_response', function (data){
-                console.log('The server says: ' + data.response);
+                console.log('El servidor dice: ' + data.response);
             });
-
+            
             var votedBefore = false;
-
             var all_votes;
             var yes_votes;
             var no_votes;
 
-
             $('#voteButton').click(function() {
               if ($('#yesButton').is(':checked')) { 
-                console.log('Voting Yes to the Server'); 
+                console.log('Votando SI en el servidor'); 
                 if (!votedBefore){
                   votedBefore = true;
                   socket.emit("vote", {newVote: "newYes"});
@@ -39,7 +37,7 @@
                   socket.emit("vote", {newVote: "changeToYes"});
                 }
               } else if($('#noButton').is(':checked')) {
-                console.log('Voting No to the Server'); 
+                console.log('Votando No en el servidor'); 
                 if (!votedBefore){
                   votedBefore = true;
                   socket.emit("vote", {newVote: "newNo"});
@@ -50,21 +48,21 @@
             });
 
             socket.on('sum_yesVotes', function(data){
-              console.log('total Yes votes: '+ data.response);
+              console.log('total de SI votos: '+ data.response);
                $('#showYesses').html(JSON.stringify(data.response));
                yes_votes = JSON.stringify(data.response);
               return yes_votes;
             });
 
             socket.on('sum_noVotes', function(data){
-              console.log('total No votes: '+ JSON.stringify(data.response));
+              console.log('total de No votos: '+ JSON.stringify(data.response));
               $('#showNos').html(JSON.stringify(data.response));
               no_votes = JSON.stringify(data.response);
               return no_votes;
             });
 
             socket.on('sum_all', function(data){
-              console.log('total votes: '+ JSON.stringify(data.response));
+              console.log('total de votos: '+ JSON.stringify(data.response));
               all_votes = JSON.stringify(data.response);
               return all_votes;
             });
