--- a/static/styles.css
+++ b/static/styles.css
@@ -3,19 +3,19 @@ body {
 	font-family: Georgia, 'Times New Roman', Times, serif;
 	margin-top: 0;
 	padding: 0 5em;
-	background-color: rgb(155, 83, 83);
+	background-color: rgb(51, 49, 49);
 }
 h1 {
-	background-color: rgb(39, 11, 11);
+	background-color: black;
 	padding: .2em;
 	border-top-left-radius: 25px;
 	border-top-right-radius: 25px; 
 	margin-bottom: 0;
-	color: rgb(224, 150, 150);
+	color:white;
 }
 
 p{
-	background-color:rgb(173, 102, 102);
+	background-color:black;
 	margin: 0;
 	padding: 1em;
 	height: 2px ;
@@ -23,7 +23,7 @@ p{
 }
 
 h2, ul, form {
-	background-color:rgb(85, 22, 22);
+	background-color:rgb(29, 28, 28);
 	color:white;
 	margin: 0;;
 }
@@ -31,7 +31,7 @@ form {
 	text-align: left;
 	padding-left: 25%;
 	padding-right: 25%;
-	background-color: rgb(85, 22, 22);
+	background-color: rgb(29, 28, 28);
 }
 
 button {
